--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <img src="./images/img-tea-cozy-logo.webp" alt="tea cozy logo" />
+
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Mission</a>
+          </li>
+
+          <li>
+            <a href="#">Featured Tea</a>
+          </li>
+
+          <li>
+            <a href="#">Locations</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
