--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <nav>
         <ul>
           <li>
-            <a href="#">Mission</a>
+            <a href="#mission">Mission</a>
           </li>
 
           <li>
-            <a href="#">Featured Tea</a>
+            <a href="#tea">Featured Tea</a>
           </li>
 
           <li>
@@ -31,7 +31,7 @@
       <section class="mission-section">
         <img
           src="./images/img-mission-background.webp"
-          alt="jar of tea leaves"
+          alt="jar of tea leaves" id="mission"
         />
 
         <div class="mission-text">
@@ -43,7 +43,7 @@
         </div>
       </section>
 
-      <section class="tea-of-the-month">
+      <section class="tea-of-the-month" id="tea">
         <h2>Tea of the Month</h2>
 
         <h4>What's Steeping at The Tea Cozy?</h4>
