--- a/index.html
+++ b/index.html
@@ -28,56 +28,14 @@
     </header>
 
     <main>
-      <section class="mission-section">
-        <img
-          src="./images/img-mission-background.webp"
-          alt="jar of tea leaves" id="mission"
-        />
-
-        <div class="mission-text">
+      <section id="mission">
+        <div id="mission-text">
           <h2>Our Mission</h2>
+
           <h4>
-            Handpicked, Artisanally Curated, Free Range, Sustainablem Small
+            Handpicked, Artisanally Curated, Free Range, Sustainable, Small
             Batch, Fair Trade, Organic Tea
           </h4>
-        </div>
-      </section>
-
-      <section class="tea-of-the-month" id="tea">
-        <h2>Tea of the Month</h2>
-
-        <h4>What's Steeping at The Tea Cozy?</h4>
-
-        <div class="featured-tea">
-          <div class="img-container">
-            <img src="./images/img-berryblitz.webp" alt="berry blitz tea" />
-
-            <h4>Fall Berry Blitz Tea</h4>
-          </div>
-
-          <div class="img-container">
-            <img src="./images/img-spiced-rum.jpg" alt="spiced rum tea">
-
-            <h4>Spiced Rum Tea</h4>
-          </div>
-
-          <div class="img-container">
-            <img src="./images/img-donut.webp" alt="seasonal donuts">
-
-            <h4>Seasonal Donuts</h4>
-          </div>
-
-          <div class="img-container">
-            <img src="./images/img-myrtle-ave.webp" alt="myrtle ave tea">
-
-            <h4>Myrtle Ave Tea</h4>
-          </div>
-
-          <div class="img-container">
-            <img src="./images/img-bedford-bizarre.webp" alt="bedford bizarre tea">
-
-            <h4>Bedford Bizarre Tea</h4>
-          </div>
         </div>
       </section>
     </main>
