Create location section + footer

--- a/index.html
+++ b/index.html
@@ -38,6 +38,75 @@
           </h4>
         </div>
       </section>
+
+      <div class="heading">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+      </div>
+
+      <section id="featured-tea">
+        <div class="tea-wrapper">
+          <figure>
+            <img src="./images/img-berryblitz.webp" alt="berry blitz tea" />
+            <figcaption>Fall Berry Blitz Tea</figcaption>
+          </figure>
+
+          <figure>
+            <img src="./images/img-spiced-rum.jpg" alt="spiced rum tea" />
+            <figcaption>Spiced Rum Tea</figcaption>
+          </figure>
+
+          <figure>
+            <img src="./images/img-donut.webp" alt="seasonal donuts" />
+            <figcaption>Seasonal Donuts</figcaption>
+          </figure>
+
+          <figure>
+            <img src="./images/img-myrtle-ave.webp" alt="myrtle ave tea" />
+            <figcaption>Myrtle Ave Tea</figcaption>
+          </figure>
+
+          <figure>
+            <img
+              src="./images/img-bedford-bizarre.webp"
+              alt="beford bizarre tea"
+            />
+            <figcaption>Bedford Bizarre Tea</figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <h2 id="location-heading">Locations</h2>
+
+      <section id="location">
+        <div class="downtown">
+          <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+
+        <div class="east-bayside">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+
+        <div class="oakdale">
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>
+      </section>
+
+      <footer>
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
+        <h5 style="text-align: left">copyright The Tea Cozy</h5>
+      </footer>
     </main>
   </body>
 </html>
